# cdpvd_dashboards_store

./: .gitignore  CHANGELOG.md  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  tbe.code-workspace
.github/: pull_request_template.md
.github/workflows/: release.yml
macros/direction_generale/: get_seed_values.sql  schema.yml
macros/educ_serv_adultes/: affich_description_code.sql  schema.yml
models/dashboards/os/: eff_etablissements_prim.sql  schema.yml
models/interfaces/: i_fgafp_contacts_adresses.sql  i_fgj_contacts_adresses.sql
models/interfaces/dofin/: i_fin_nomen_unit_adm.sql  schema.yml
models/interfaces/gpi/: i_gpm_e_abs.sql  i_gpm_e_adr.sql  i_gpm_e_dan.sql  i_gpm_e_ele.sql  i_gpm_e_ele_adr_meres.sql  i_gpm_e_ele_adr_peres.sql  i_gpm_e_ele_adr_tuteurs.sql  i_gpm_n_fact.sql  schema.yml
models/interfaces/jade/: i_e_ele.sql  i_e_freq.sql  i_e_ri_mentions.sql  i_jade_e_ele_adr_eleves.sql  i_jade_e_ele_adr_meres.sql  i_jade_e_ele_adr_peres.sql  i_jade_e_ele_adr_tuteurs.sql  i_jade_e_ele_adrpost_eleves.sql
models/interfaces/jade_adultes/: i_e_adr_adultes.sql  i_e_ele_adultes.sql  i_e_elematfpfga_adultes.sql  i_e_freq_adultes.sql  i_e_matele_adultes.sql  i_e_o_orghor.sql  i_e_o_orghor_adultes.sql  i_t_ecocen_adultes.sql  i_t_mat_adultes.sql  i_t_motif_adultes.sql  i_t_prog_adultes.sql  i_t_wl_descr_adultes.sql  schema.yml
models/interfaces/paie/: i_grh_poste.sql  i_grh_poste_affect.sql  i_grh_poste_lieu_trav.sql  i_grh_tab_motif_aff.sql  i_grh_tab_param_caract_post.sql  i_pai_habs.sql  i_pai_hchq.sql  i_pai_hchq_pmnt.sql  i_pai_hchq_pmnt_dist_cmpt.sql  i_pai_hemp.sql  i_pai_qualif.sql  i_pai_tab_cal_jour.sql  i_pai_tab_cal_per.sql  i_pai_tab_corp_empl.sql  i_pai_tab_corp_empl_date.sql  i_pai_tab_etat_empl.sql  i_pai_tab_mot_abs.sql  i_pai_tab_pmnt.sql  i_paie_hemp.sql  i_wl_descr_paie.sql  (+1 more)
models/rls/: lieux_travail.sql  schema.yml  unites_services.sql  utilisateurs_gestionnaires.sql
projet_cssst/: README.md  pyproject.toml  setup.cfg  setup.py
projet_cssst/projet_cssst/: assets.py  dbt_job.py  definitions.py
reporting/direction_generale/: suivi_effectif_etc.pbit
reporting/educ_serv_adultes/: effectif_css_adultes:memory:.ses
reporting/rf/: Factures_solde_eleves.pbit  tb_rf.pbit
(+268 files in other folders)
