[project]
name = "projet_cssst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "projet_cssst.definitions"
code_location_name = "projet_cssst"

[tool.setuptools.packages.find]
exclude=["projet_cssst_tests"]
